# qrspi-agent

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  setup.py
docs/: AUTOMATION_ENGINE_GAP_ANALYSIS.md  EXAMPLE.md  README.zh.md  stage-d-design-discussion.md
qrspi/: __init__.py  agents.py  cli.py  context.py  engine.py  parsers.py  prompts.py  runner.py  validators.py  workflow.py
scripts/: demo.py
skills/qrspi-cli-workflow/: SKILL.md
skills/qrspi-cli-workflow/agents/: openai.yaml
tests/: test_context.py  test_engine.py  test_parsers.py  test_runner.py  test_validators.py  test_workflow.py
